Change src for image in header

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         
         <header>
 
-            <img src="/img/movie-posters.jpg" alt="Movie posters photography by Andre Tan"/>
+            <img src="./img/movie-posters.jpg" alt="Movie posters photography by Andre Tan"/>
 
             <section>
                 <h1>Find your film</h1>
