--- a/watchlist.html
+++ b/watchlist.html
@@ -6,6 +6,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="author" content="Carlos Rangel" />
+        <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
